--- a/client/index.html
+++ b/client/index.html
@@ -20,6 +20,13 @@
         ></textarea>
         <button type="submit"><img src="assets/send.svg" alt="" /></button>
       </form>
+      <div class="copyright">
+        <span
+          >Designed and created by
+          <a href="https://www.linkedin.com/in/juadebade/">Juadebfm</a> using
+          <a href="https://openai.com/">OPENAI</a> APIs</span
+        >
+      </div>
     </div>
     <script type="module" src="/script.js"></script>
   </body>
